SimonStewart: Bringing android branch up to date with HEAD (r7353)
git-svn-id: http://selenium.googlecode.com/svn@7354 07704840-8298-11de-bf8c-fd130f914ac9